--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -33,7 +33,7 @@
             <input type="text" placeholder="Search Laro" />
         </div>
         <ul class="nav-links">
-            <li><a href="/booking.html">BOOKING</a></li>
+            <li><a href="/overview.html" title="Overview"><i class="bi bi-info-circle-fill"></i></a></li>
             <li class="notification-item">
                 <a href="#" id="notification-bell">
                     <i class="bi bi-bell-fill"></i>
